@@ -1,3 +1,7 @@
+2014-03-28  Richard Biener  <rguenther@suse.de>
+
+	* lto-plugin.c (process_symtab): Handle EINTR and short reads.
+
 2014-03-17  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* configure.ac (ac_lto_plugin_ldflags): Set to -Wc,-static-libgcc
